--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,12 +56,16 @@ en:
     no_of_patients_obs_at_home: "Total no. of patients under observation at homes"
     no_of_recovered_patient: "Total no. of patients recovered"
     no_of_death: "Total no. of death"
-  total_no_of_people_in_observation: "Total no of total no of people in observation"
-  total_no_of_people_in_observation_at_home: "Total no of people in observation at home"
-  total_no_of_people_in_observation_at_hospital: "Total no of people in observation at hospital"
-  total_no_of_people_admitted_today: "Total no of people admitted today"
-  total_no_of_people_recovered_today: "Total no of people recovered today"
-  total_no_of_people_died_today: "Total no of people died today"
+  total_no_of_patients: "Total no of patients"
+  total_no_of_patients_in_observation: "Total no of patients in observation"
+  total_no_of_patients_in_observation_at_home: "Total no of patients in observation at home"
+  total_no_of_patients_in_observation_at_hospital: "Total no of patients in observation at hospital"
+  total_no_of_patients_admitted_today: "Total no of patients admitted today"
+  total_no_of_patients_recovered_today: "Total no of patients recovered today"
+  total_no_of_patients_died_today: "Total no of patients died today"
+  date_text: "Entry Date"
+  created_at: "Entry created at"
+  actions: "Actions"
   
   state: "State"
   state:
