more changes in functional, css and introducting  cancelled data entried

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,12 +50,13 @@ en:
               enter_atleast_one_data: "Enter data in atleast column"
   hello: "Hello world"
   active_admin: 
-    total_no_patients: "Total no. of patients"
-    no_of_patients_obs: "Total no. of patients under observation"
-    no_of_patients_obs_at_hospital: "Total no. of patients under observation at hospitals"
-    no_of_patients_obs_at_home: "Total no. of patients under observation at homes"
-    no_of_recovered_patient: "Total no. of patients recovered"
-    no_of_death: "Total no. of death"
+    total_no_patients: "Total no of patients"
+    no_of_patients_obs: "Total no of patients under observation"
+    no_of_patients_obs_at_hospital: "Total no of patients under observation at hospitals"
+    no_of_patients_obs_at_home: "Total no of patients under observation at homes"
+    no_of_patients_admitted: "Total no of patients admitted"
+    no_of_recovered_patient: "Total no of patients recovered"
+    no_of_death: "Total no of death"
   total_no_of_patients: "Total no of patients"
   total_no_of_patients_in_observation: "Total no of patients in observation"
   total_no_of_patients_in_observation_at_home: "Total no of patients in observation at home"
